some look-&-feel fixes
line up social media icons and name in edit and view mode
change “Short Bio” to “About me”
move “About me” section out of banner in mobile
fix some indentation issues and extra spacing

--- a/src/css/profile/profile-shared.less
+++ b/src/css/profile/profile-shared.less
@@ -61,10 +61,20 @@
       .large-header();
       color: @hylo-white;
       text-transform: capitalize;
-      font-size: 40;
+      font-size: 40px;
+      line-height: 1em;
+      @media (max-width: @screen-xs-max) {
+        font-size: 32px;
+      }
+    }
+
+    @media (min-width: @screen-sm) {
+      padding-left: 2*@std-padding;
     }
 
     @media (max-width: @screen-xs-max) {
+      padding-bottom: @std-padding;
+
       &, span, div {
         text-align: center;
       }
@@ -93,9 +103,16 @@
       margin-left: 10px;
     }
 
+    @media (max-width: @screen-xs-max) {
+      display: block;
+      padding-left: 4px;
+      padding-top: 6px;
+    }
+
     > a, > i {
       display: inline-block;
-      margin-right: 4px;
+      margin-left: 15px;
+      margin-right: 6px;
       position: relative;
       font-size: 16px;
       color: white;
